# hwbd

./: CMakeLists.txt  main.c  main.h  utils.c  utils.h
sample_code/: make_rand_file.c  make_rand_file.h  multiwayMergesort.c  multiwayMergesort.h  multiway_main.c  multiway_main.h  stride-scan.c
